[package]
name = "preconf-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6.2", features = [
    "full",
    "rpc-types-eth",
    "rpc-types-beacon",
    "serde",
    "providers",
    "signer-mnemonic",
    "rlp",
    "getrandom",
    "kzg",
] }
eyre = "0.6.12"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
